objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <label>Budgeted Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>( AmountWonOpportunities -  ActualCost ) /  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI is the return on investment or net gain.  This is a sample formula field that calculates (TOTAL VALUE WON OPPORTUNITIES - ACTUAL COST) / ACTUAL COST</inlineHelpText>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <inlineHelpText>Used to identify which group is creating the campaign.</inlineHelpText>
        <label>Campaign Source</label>
        <picklist>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Solutions-BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Solutions-Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephony Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cobalt_Team_Owner__c</fullName>
        <inlineHelpText>Which Cobalt team is responsible for this campaign?</inlineHelpText>
        <label>Cobalt Team Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>used only for migration work - do not display on layouts</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Report_Activity_Requirements__c</fullName>
        <description>Phone = type contains &apos;call&apos; or &apos;visit&apos; (and subject does not contain &apos;email&apos;) &amp; Visits = type contains &apos;visit&apos; or &apos;in dealership&apos; (and subject does not contain &apos;email&apos;) &amp; Email contains &apos;email&apos; or &apos;phone&apos; or &apos;call&apos; or &apos;visit&apos; or &apos;in dealership&apos;</description>
        <inlineHelpText>Phone = type contains &apos;call&apos; or &apos;visit&apos; (and subject does not contain &apos;email&apos;) &amp; Visits = type contains &apos;visit&apos; or &apos;in dealership&apos; (and subject does not contain &apos;email&apos;) &amp; Email contains &apos;email&apos; or &apos;phone&apos; or &apos;call&apos; or &apos;visit&apos; or &apos;in dealership&apos;</inlineHelpText>
        <label>Field Report Activity Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emails</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Report_Activity_Requirements__c</fullName>
        <description>Phone = type contains &apos;call&apos; or &apos;visit&apos; (and subject does not contain &apos;email&apos;) &amp; Visits = type contains &apos;visit&apos; or &apos;in dealership&apos; (and subject does not contain &apos;email&apos;) &amp; Email contains &apos;email&apos; or &apos;phone&apos; or &apos;call&apos; or &apos;visit&apos; or &apos;in dealership&apos;</description>
        <inlineHelpText>Phone = type contains &apos;call&apos; or &apos;visit&apos; (and subject does not contain &apos;email&apos;) &amp; Visits = type contains &apos;visit&apos; or &apos;in dealership&apos; (and subject does not contain &apos;email&apos;) &amp; Email contains &apos;email&apos; or &apos;phone&apos; or &apos;call&apos; or &apos;visit&apos; or &apos;in dealership&apos;</inlineHelpText>
        <label>Inside Report Activity Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emails</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subaru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volvo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Focus__c</fullName>
        <label>Product Focus</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReMarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media/Reputation Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Contacts__c</fullName>
        <label>Total Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>AllAccounts</role>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveISCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>jones,huseth,binkley,grig,becker,senger,willing</value>
        </filters>
        <label>All Active IS Campaigns</label>
        <sharedTo>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BZCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>BZ</value>
        </filters>
        <label>BZ Campaigns</label>
        <sharedTo>
            <role>DivWideEVP</role>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DSM_OEM_11_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>Campaign_Source__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Thompson</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DSM - OEM 11 Campaigns</label>
        <sharedTo>
            <roleAndSubordinates>PerformanceImprovementConsultants</roleAndSubordinates>
            <roleAndSubordinates>TheCobaltGroup</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Campaigns</label>
        <sharedTo>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Profit_Clinics_FY11</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Profit Clinic -</value>
        </filters>
        <label>Profit Clinics FY11</label>
        <sharedTo>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Profit_Clinics_FY12</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>startsWith</operation>
            <value>Profit Clinic FY12</value>
        </filters>
        <label>Profit Clinics FY12</label>
        <sharedTo>
            <group>Profit_Clinic_Group</group>
            <role>DivWideEVP</role>
            <roleAndSubordinates>Unassigned_NIADA_KeyRep</roleAndSubordinates>
            <roleAndSubordinates>VPCanada</roleAndSubordinates>
            <roleAndSubordinates>VPEnterpriseTruck</roleAndSubordinates>
            <roleAndSubordinates>VPLaser</roleAndSubordinates>
            <roleAndSubordinates>VPNational</roleAndSubordinates>
            <roleAndSubordinates>VPNortheast</roleAndSubordinates>
            <roleAndSubordinates>VPSoutheast</roleAndSubordinates>
            <roleAndSubordinates>VPSouthwest</roleAndSubordinates>
            <roleAndSubordinates>VPWest</roleAndSubordinates>
            <roleAndSubordinates>VP_InsidseSales</roleAndSubordinates>
            <roleAndSubordinates>VP_North</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ADPDSAccountBasedCampaign</fullName>
        <active>true</active>
        <description>Used for Campaigns that utilizes Accounts as Campaign Members</description>
        <label>ADPDS Account Based Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADPDSContactBasedCampaign</fullName>
        <active>true</active>
        <description>Deactivated per documentation for Org Consolidation (reactivate for mktg-lead gen contact campaigns)</description>
        <label>ADPDS Contact Based Campaign</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_no_more_than_365_in_future</fullName>
        <active>true</active>
        <description>End_Date_no_more_than_365_in_future</description>
        <errorConditionFormula>EndDate - TODAY() &gt; 365</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>Campaign End Dates cannot be more than 1 year in the future!</errorMessage>
    </validationRules>
</CustomObject>